--- a/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Mixed layer.html
+++ b/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Mixed layer.html
@@ -1775,8 +1775,7 @@ title="Print to PDF"
 </div>
 </div>
 <p>The mixed layer is mixed by the winds on the surface creating a homogeneous layer. It is being mixed by wind stress, eddies, kinematic viscosity and convection. The stronger the winds, the deeper the mixed layer. The mixed layer is deeper in the Winter than in Summer. In the Winter, the surface water cooles so it becomes denser causing convection as it is more dense than the layer below. More turbulence also deepens the mixed layer.</p>
-<p style="text-align:center;"><img src="https://www.coexploration.org/bermuda/assets/images/thermocline.jpg" alt="image info" width="400" 
-     height="400"/></p>
+<p style="text-align:center;"><img src="https://www.coexploration.org/bermuda/assets/images/thermocline.jpg" alt="image info" style= "width: 70%"/></p>
 <p>The mixed layer is between <span class="math notranslate nohighlight">\(10\)</span> and <span class="math notranslate nohighlight">\(200\,m\)</span> approximately thick depending on stratification (density gradients), season, wind stress, convection and velocity gradient (turbulence and eddies).</p>
 <p>To find out more about this dataset, we can evaluate a few factors:
 You can also try this out for yourself to see how much information is contained in this dataset.</p>
