--- a/d_geosciences/High-Temperature Geochemistry/Isotope_Systematics_of_Mixing.html
+++ b/d_geosciences/High-Temperature Geochemistry/Isotope_Systematics_of_Mixing.html
@@ -1928,7 +1928,7 @@ title="Print to PDF"
 <div class="math notranslate nohighlight">
 \[K = \frac{Sr_B/Nd_B}{Sr_A/Nd_A}\]</div>
 <p>The isotopic mixing line is straight only if <span class="math notranslate nohighlight">\(K = 1\)</span>. In all other cases, mixing generates curves.</p>
-<p style="text-align:center;"><img src="images/M1.png" style="width:550px;height:500px" /></p>
+<p style="text-align:center;"><img src="images/M1.png" style= "width: 70%" /></p>
 <p>Some additional comments …</p>
 <ul class="simple">
 <li><p>Mixing lines in <span class="math notranslate nohighlight">\(Pb\)</span> isotope plots (<span class="math notranslate nohighlight">\({^{207}Pb}/{^{204}Pb}\)</span> vs. <span class="math notranslate nohighlight">\({^{206}Pb}/{^{204}Pb}\)</span>, <span class="math notranslate nohighlight">\({^{208}Pb}/{^{204}Pb}\)</span> vs. <span class="math notranslate nohighlight">\({^{206}Pb}/{^{204}Pb}\)</span>, etc) are always straight lines because these ratios share a common denominator.</p></li>
