--- a/d_geosciences/High-Temperature Geochemistry/Nuclides.html
+++ b/d_geosciences/High-Temperature Geochemistry/Nuclides.html
@@ -1809,11 +1809,11 @@ holds the nucleus together:</p>
 <p>A larger mass defect is equivalent to more binding energy and a more stable nucleus.</p>
 <p>The atomic weight of an element with several isotopes is the sum of the masses of the naturally occurring isotopes, weighed in accordance of the fractional molar (not weight!) isotope abundance.</p>
 <p>Example:</p>
-<p style="text-align:center;"><img src="images/N1.png" style="width:350px;height:100px"/></p>
+<p style="text-align:center;"><img src="images/N1.png" style= "width: 50%"/></p>
 <p>The chart of nuclides groups the isotopes in a plot of proton number <span class="math notranslate nohighlight">\(Z\)</span> vs. neutron number <span class="math notranslate nohighlight">\(N\)</span>. The chart provides information on all <span class="math notranslate nohighlight">\(264\)</span> known stable isotopes, long-lived radioactive nuclides, and a large number of short and very short-lived radioactive nuclides. The top figure is only a
 small excerpt from the complete chart at the bottom!</p>
-<p style="text-align:center;"><img src="images/N2.png" style="width:500px;height:450px"/></p>
-<p style="text-align:center;"><img src="images/N3.png" style="width:500px;height:400px" align="center"/></p>
+<p style="text-align:center;"><img src="images/N2.png" style= "width: 80%"/></p>
+<p style="text-align:center;"><img src="images/N3.png" style= "width: 80%" align="center"/></p>
 <p>Note that:</p>
 <ul class="simple">
 <li><p>horizontal trends are for isotopes of a single element;</p></li>
