deploy: af091765afeb1fe88a811bb8b43261745ec03d8c

--- a/c_mathematics/basic_maths/8_Vectors.html
+++ b/c_mathematics/basic_maths/8_Vectors.html
@@ -1845,7 +1845,7 @@ title="Print to PDF"
 <span class="c1">#In the plots the vectors have a big point to mark the direction.</span>
 
 <span class="k">def</span> <span class="nf">vector_plot</span><span class="p">(</span><span class="n">tvects</span><span class="p">,</span><span class="n">is_vect</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span><span class="n">orig</span><span class="o">=</span><span class="p">[</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">]):</span>
-    <span class="sd">&quot;&quot;&quot;Plot vectors using plotly&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Plot vectors using plotly&quot;&quot;&quot;</span>
 
     <span class="k">if</span> <span class="n">is_vect</span><span class="p">:</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">orig</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span><span class="s2">&quot;__iter__&quot;</span><span class="p">):</span>
