--- a/d_geosciences/Low-Temperature Geochemistry/Arrhenius_Equation.html
+++ b/d_geosciences/Low-Temperature Geochemistry/Arrhenius_Equation.html
@@ -2025,7 +2025,7 @@ title="Print to PDF"
 
 <span class="c1"># calculate Ea</span>
 <span class="n">R</span> <span class="o">=</span> <span class="mf">8.314</span>
-<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;The activation energy is </span><span class="si">{</span><span class="n">round_to_n_sf</span><span class="p">(</span><span class="o">-</span><span class="n">slope</span><span class="o">*</span><span class="n">R</span><span class="p">,</span> <span class="mi">3</span><span class="p">)</span><span class="si">}</span><span class="s2"> J/mol.&quot;</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;The activation energy is </span><span class="si">{</span><span class="n">round_to_n_sf</span><span class="p">(</span><span class="o">-</span><span class="n">slope</span><span class="o">*</span><span class="n">R</span><span class="p">,</span><span class="w"> </span><span class="mi">3</span><span class="p">)</span><span class="si">}</span><span class="s2"> J/mol.&quot;</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
