--- a/c_mathematics/numerical_methods/NM1_2020/NM1_2020_lecture1.html
+++ b/c_mathematics/numerical_methods/NM1_2020/NM1_2020_lecture1.html
@@ -2528,7 +2528,7 @@ $$Dataset\;y-values = \{ 0.5, 0.4, 0.3, 0.1, 0.9, 0.8 \}$$
 <span class="c1"># Our plot is made into one of the subplot of the figure</span>
 
 <span class="k">def</span> <span class="nf">plot_raw_data</span><span class="p">(</span><span class="n">xi</span><span class="p">,</span> <span class="n">yi</span><span class="p">,</span> <span class="n">ax</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;plot x vs y on axes ax, </span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;plot x vs y on axes ax, </span>
 <span class="sd">    add axes labels and turn on grid</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">ax</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">xi</span><span class="p">,</span> <span class="n">yi</span><span class="p">,</span> <span class="s1">&#39;ko&#39;</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="s1">&#39;raw data&#39;</span><span class="p">)</span>
@@ -3229,7 +3229,7 @@ P_3(x) &amp;= a_0 +(x-x_0)a_1 + (x-x_0)(x-x_1)a_2 + (x-x_0)(x-x_1)(x-x_2)a_3\[5p
 
 
 <span class="k">def</span> <span class="nf">calculate_newton_poly_coeffs</span><span class="p">(</span><span class="n">xi</span><span class="p">,</span> <span class="n">yi</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot; Evaluate the coefficients a_i recursively using Newton&#39;s method</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot; Evaluate the coefficients a_i recursively using Newton&#39;s method</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     
     <span class="c1"># initialise the array &#39;a&#39; with yi, but take a copy to ensure we don&#39;t</span>
@@ -3259,7 +3259,7 @@ P_3(x) &amp;= a_0 +(x-x_0)a_1 + (x-x_0)(x-x_1)a_2 + (x-x_0)(x-x_1)(x-x_2)a_3\[5p
 <span class="c1"># given at the start of this section.</span>
 
 <span class="k">def</span> <span class="nf">eval_newton_poly</span><span class="p">(</span><span class="n">a</span><span class="p">,</span> <span class="n">xi</span><span class="p">,</span> <span class="n">x</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot; Function to evaluate the Newton polynomial</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot; Function to evaluate the Newton polynomial</span>
 <span class="sd">    at x, given the data point xi and the polynomial coeffs a</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">N</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">xi</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span>  <span class="c1"># polynomial degree</span>
